--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -29,7 +29,7 @@
                                 </div>
                         </form>
                         <div class="center-align">
-                            <a class="waves-effect waves-light btn" id="payment-btn" href=""><i class="material-icons left">check_circle</i>Pembayaran</a>
+                            <a class="waves-effect waves-light btn" id="payment-btn"  href="{% url 'process-done' %}" ><i class="material-icons left">check_circle</i>Pembayaran</a>
                         </div>
                       </div>
             </div>
