--- a/users/templates/users/changepassword.html
+++ b/users/templates/users/changepassword.html
@@ -8,9 +8,9 @@
                         <div class = "card-content">
                         {% csrf_token %}
                             <h5>
-                                Update Profile
+                                Update Password
                             </h5>
-                            {{ u_form|crispy }}
+                            {{ form|crispy}}
                             <button class="waves-effect waves-light btn m-10">
                            Update
                             </button>
