--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -6,7 +6,7 @@
                 </div>
             <div class="card">
                 <div class="card-content">
-                    <button class="btn waves-effect waves-yellow teal"><i class="material-icons left">arrow_back</i>Kembali</button>
+                    <a class="btn waves-effect waves-yellow teal" href="{% url 'page-home' %}"><i class="material-icons left">arrow_back</i>Home</a>
                     <div class="row">
                                 <div class="col s4">
                                         <blockquote>Harga Total:    <strong>Rp{{order.get_total_price}}</strong> </blockquote>
