--- a/users/templates/users/account.html
+++ b/users/templates/users/account.html
@@ -6,8 +6,8 @@
 
 <div class="row">
         <div class="col s12 m4">
-            <a href=#>
-                <div class="card pink lighten-5">
+            <a href="{% url 'profile' %}">
+                <div class="card ">
                     <div class="card-content center">
                         <i class="material-icons large center">group</i>
                         <h5>Ubah Profile</h5>
@@ -17,21 +17,25 @@
             </div>
 
     <div class="col s12 m4">
-            <div class="card pink lighten-5">
+            <a href="{% url 'password' %}">
+            <div class="card  ">
                 <div class="card-content center">
                     <i class="material-icons large center">group</i>
                     <h5>Ganti Password</h5>
                 </div>
             </div>
+            </a>
         </div>
 
         <div class="col s12 m4">
-                <div class="card pink lighten-5">
+                <a href="{% url 'order-history' %}">
+                <div class="card">
                     <div class="card-content center">
                         <i class="material-icons large center">group</i>
                         <h5>Riwayat</h5>
                     </div>
                 </div>
+                </a>
             </div>
 </div>
 
